<resources>
    <string name="app_name">JoinService</string>
    <string name="avançar">Avançar</string>
    <string name="pular">Pular</string>
    <string name="alterar_foto">Alterar foto</string>
    <string name="salvar">Salvar</string>


    <string name="texto_cadastro_perfil_1">Nome</string>
    <string name="texto_cadastro_perfil_2">CPF</string>
    <string name="texto_cadastro_perfil_3">Senha</string>
    <string name="texto_cadastro_perfil_4">Confirmar Senha</string>
    <string name="texto_cadastro_perfil_5">Telefone</string>

    <string name="texto_cadastro_email_1">Email</string>

    <string name="texto_cadastro_foto_1">Adicione foto ao perfil</string>
    <string name="texto_cadastro_foto_2">Adicione uma foto de perfil para que outros usuários saibam quem você é</string>

    <string name="texto_cadastro_telefone_1">Adicione seu número de celular</string>
    <string name="texto_cadastro_telefone_2">Você pode atualizar ou remover a qualquer momento</string>
    <string name="title_activity_list_order_consumer">ListOrderConsumerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="texto_cadastro_servico_categoria_1">Registro de serviço</string>
    <string name="texto_cadastro_servico_categoria_2">Começaremos pela categoria, o cadastro será rápido e fácil</string>

    <string name="texto_cadastro_servico_categoria_3">Selecione um prazo</string>
    <string name="texto_cadastro_servico_categoria_4">Dentro de no máximo quantos dias, a partir de agora você precisa que o serviço seja realizado?</string>

    <string name="texto_cadastro_servico_categoria_5">Local</string>
    <string name="texto_cadastro_servico_categoria_6">Selecione no mapa o local onde o serviço será executado</string>

    <string name="texto_cadastro_servico_categoria_7">Descrição</string>
    <string name="texto_cadastro_servico_categoria_8">Descreva brevemente do que se trata o serviço</string>
    <string name="title_activity_maps">Map</string>

    <string name="texto_profissionais_interessados_fragment_servico">Profissionais Interessados</string>
    <string name="texto_anunciantes_fragment_servico">Anunciante</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_bar_provider_menu_findajob">Encontre um Serviço</string>
    <string name="search_bar">Search</string>
    <string name="title_activity_home_provider">HomeProvider</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btn_enviar_proposta">Enviar Proposta</string>
</resources>
