<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joinservice.joinservice.register.RegisterEmailActivity"
    android:gravity="center"
    android:padding="35dp">

    <ImageView
        android:id="@+id/imageViewCadastroEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_register"
        android:layout_marginTop="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/texto_cadastro_perfil_1"/>

            <EditText
                android:id="@+id/editTextCadastroNomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/texto_cadastro_perfil_2"/>

            <EditText
                android:id="@+id/editTextCadastroCPF"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                android:inputType="number"/>
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/texto_cadastro_perfil_3"/>

            <EditText
                android:id="@+id/editTextCadastroSenha"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/texto_cadastro_perfil_4"/>

            <EditText
                android:id="@+id/editTextCadastroSenhaConfirmacao"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                android:inputType="text"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avançar"
                android:onClick="proximo"
                android:background="@drawable/screen_border"
                android:textColor="@color/colorBranco"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
